Adicionado header e logo da pagina

--- a/HeaderLinks/style.css
+++ b/HeaderLinks/style.css
@@ -38,3 +38,33 @@
     background-color: rgb(230, 33, 23);
     opacity: 1.2;
 }
+.container-header{
+    display: flex;
+    background-color: yellow;
+    height: 350px;
+}
+.logo-img{
+    position: absolute;
+    margin-top: 125px;
+    margin-left: calc(20% - 150px / 2);
+    width: 150px;
+    height: 100px;
+}
+.logo-bubble{
+    position: absolute;
+    background-color: white;
+    margin-top: 125px;
+    margin-left: calc(30% - 150px / 2);
+    border-style: solid;
+    border-width: 2.5px;
+    border-radius: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    width: auto;
+    height: 100px;
+}
+.logo-name{
+    text-align: center;
+    margin-top: 19px;
+    font-size: 50px;
+}
